--- a/roles/lb/haproxy/templates/haproxy.cfg.j2
+++ b/roles/lb/haproxy/templates/haproxy.cfg.j2
@@ -16,7 +16,7 @@ frontend k8s-api
     default_backend k8s-api-backend
 
 backend k8s-api-backend
-    balance roundrobin
+    balance leastconn
     option tcp-check
 {% for node in k8s_control_plane_nodes %}
     server {{ node.name }} {{ node.ip }}:6443 check
